# cargo-permissions

./: Cargo.toml  README.md
src/: main.rs
