[package]
name = "cargo-permissions"
description = "A small utility retrieve which core libraries uses a Rust program."
version = "0.1.1"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
repository = "https://github.com/fcsonline/cargo-permissions"
readme = "README.md"
keywords = ["permissions", "cargo", "plugin"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "parsing"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
syn = {version = "0.15.33", features = ["parsing", "printing", "clone-impls", "full", "extra-traits", "visit"]}
clap = "2"
